--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -1,6 +1,7 @@
 .app {
     background-color: var(--primary-color);
     font-family: var(--font-base);
+    overflow-x: hidden;
   }
   
   .app__whitebg {
@@ -104,9 +105,7 @@
     flex-direction: column;
     
     
-    padding: 1rem;
-    padding-bottom: 4rem;
-  
+    padding: 1rem;  
     div {
       width: 40px;
       height: 40px;
