--- a/src/container/Footer/_footer.scss
+++ b/src/container/Footer/_footer.scss
@@ -11,6 +11,7 @@
     align-items: center;
     flex-wrap: wrap;
     margin: 4rem 2rem 2rem;
+    gap: 1rem;
 
     .app__footer-card{
         min-width: 290px;
@@ -59,6 +60,13 @@
     background-color: #f2f7fb;
 }
 
+.app__footer-cards .app__footer-card.cv {
+    background-color: #23425c;
+    a{
+        color: #fff;
+    }
+}
+
 .app__footer-form{
     width: 60%;
     flex-direction: column;
@@ -87,7 +95,29 @@
         }
 
         textarea{
-            
+            height: 170px;
         }
+
+        &:hover{
+            box-shadow: 0 0 25px var(--primary-color);
+        }
+    }
+
+    button{
+        padding: 1rem 2rem;
+        border-radius: 10px;
+        border: none;
+        background-color: var(--secondary-color);
+        font-weight: 500;
+        color: var(--white-color);
+        outline: none;
+        margin: 2rem 0 0 0;
+        font-family: var(--font-base);
+        cursor: pointer;
+    }
+
+    @media screen and (min-width: 768px){
+        width: 100%;
+        margin: 1rem 0;
     }
 }
